Changes to OctantisPass.cpp and CMakeList.txt in order to include PrintVhdlFile

--- a/llvm/lib/Transforms/Octantis/CMakeLists.txt
+++ b/llvm/lib/Transforms/Octantis/CMakeLists.txt
@@ -10,6 +10,7 @@ add_llvm_library( LLVMOctantis MODULE BUILDTREE_ONLY
   AdditionalLogicPorts.cpp
   LiMCompiler.cpp
   PrintDexFile.cpp
+  PrintVhdlFile.cpp
   OctantisPass.cpp
 
 #  DEPENDS
